--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/mph_background"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FNStatDisplay"></activity>
-        <activity android:name=".Fortnite.FortniteStats" />
+        <activity android:name=".forgotPassword"></activity>
+        <activity android:name=".FNStatDisplay" />
         <activity android:name=".OWStatDisplay" />
         <activity android:name=".DisplayOther" />
         <activity android:name=".ChangeUsername" />
